<resources>
    <string name="app_name">FASH</string>

    <string name="action_search">Search</string>

    <string name="string_featured_products">Featured Products</string>
    <string name="string_categories">Categories</string>
    <string name="string_shops">Visit your favorite shops</string>
    <string name="string_description">Description</string>
    <string name="string_available_sizes">Sizes available</string>
    <string name="string_available_locations">View Shop Locations on Map</string>
    <string name="no_network_error">No internet connection.Please check your connection.</string>

    <!--Login Page -->
    <string name="string_login">Login</string>
    <string name="string_forgot_password"><u>Forgot Password?</u></string>
    <string name="string_signup">Don\'t have an account? <u>Register!</u></string>

    <!-- User Registration - Billing address & Delivery Address-->
    <string name="string_billing_address">Billing Address</string>
    <string name="string_delivery_address">Delivery Address</string>
    <string name="string_address_line1">Address Line 1</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_address_line2">Address Line 2</string>
    <string name="string_city">City</string>
    <string name="string_province">Province</string>
    <string-array name="province_array">
        <item>-- Select the Province --</item>
        <item>Western</item>
        <item>Southern</item>
        <item>Northern</item>
        <item>Eastern</item>
        <item>Sabaragamuwa</item>
        <item>North Western</item>
        <item>Uva</item>
        <item>Central</item>
        <item>North Central</item>
    </string-array>
    <string name="string_address_number">Number</string>

    <!-- Main Tab -->
    <string name="string_home">Home</string>
    <string name="string_men">Men</string>
    <string name="string_women">Women</string>
    <string name="string_kids">Kids</string>
    <string name="string_accessories">Accessories</string>
    <string name="string_about">About</string>

    <!-- Profile Tabs -->
    <string name="string_my_profile">My Profile</string>
    <string name="string_order_history">Order History</string>
    <string name="string_notifications">Notifications</string>

    <!-- Payment Tabs -->
    <string name="string_quantity">Quantity</string>

    <!-- Error Messages -->
    <string name="empty_first_name">First name cannot be empty</string>
    <string name="empty_last_name">Last name cannot be empty</string>
    <string name="empty_email">Email address cannot be empty</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_confirm_password">Confirmation password cannot be empty</string>
    <string name="invalid_confirm_password">Confirmation password does not match</string>

    <!-- App URL -->
    <string name="base_url">http://192.241.191.200/api/v1/</string>
    <string name="live_url">https://fash.lk/api/v1/</string>
    <string name="featured_products_url">products/featured?</string>
    <string name="featured_shops_url">shops/featured</string>
    <string name="single_product_url">products/</string>
    <string name="categories_url">categories?</string>
    <string name="shop_super_categories_url">superCategories?</string>
    <string name="category_products_url">search?</string>


</resources>
