<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_layout_color"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_app_logo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4.7"
                android:weightSum="4.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_items"
                    android:layout_marginRight="@dimen/margin_items"
                    android:background="@android:color/transparent"
                    android:text="@string/string_billing_address"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/heading_text_color"/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:background="@drawable/textview_drawable"
                    android:layout_marginLeft="@dimen/margin_items"
                    android:layout_marginRight="@dimen/margin_items"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <EditText
                        android:id="@+id/txtAddOne"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/string_address_line1"
                        android:textColorHint="@color/txt_color_white"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:background="@drawable/textview_drawable"
                    android:layout_marginLeft="@dimen/margin_items"
                    android:layout_marginRight="@dimen/margin_items"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <EditText
                        android:id="@+id/txtAddTwo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/string_address_line2"
                        android:textColorHint="@color/txt_color_white"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:background="@drawable/textview_drawable"
                    android:layout_marginLeft="@dimen/margin_items"
                    android:layout_marginRight="@dimen/margin_items"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <EditText
                        android:id="@+id/txtCity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/string_city"
                        android:textColorHint="@color/txt_color_white"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:background="@drawable/textview_drawable"
                    android:layout_marginLeft="@dimen/margin_items"
                    android:layout_marginRight="@dimen/margin_items"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="match_parent" />

                    <Spinner
                        android:id="@+id/province_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:id="@+id/nxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.1"
                    android:weightSum="1"
                    android:orientation="horizontal">

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:fabSize="mini"
            android:src="@drawable/ic_next"
            app:layout_anchor="@id/nxtLayout"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@color/price_tag_color"
            app:rippleColor="#FFFFFF" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>