<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout_color"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:gravity="center">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/login_app_logo"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.2"
        android:weightSum="3.2"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/textview_drawable"
            android:layout_marginLeft="@dimen/margin_items"
            android:layout_marginRight="@dimen/margin_items"
            android:weightSum="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_name"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="User Name"
                android:textColorHint="@color/txt_color_white"/>

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/textview_drawable"
            android:layout_marginLeft="@dimen/margin_items"
            android:layout_marginRight="@dimen/margin_items"
            android:weightSum="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColorHint="@color/txt_color_white"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="@dimen/margin_items"
            android:layout_marginRight="@dimen/margin_items"
            android:textColor="@color/txt_color_white"
            android:text="@string/string_login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_heading"
            android:background="@drawable/tab_selected"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:weightSum="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|top">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_forgot_password"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/heading_text_color"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_signup"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/heading_text_color"/>

    </LinearLayout>

</LinearLayout>